--- a/estilo.css
+++ b/estilo.css
@@ -35,6 +35,7 @@ div#cabecalho{
     padding: auto;
     margin: 10px;
     border: 5px solid black;
+    width: 100wh;
     border-radius: 10px;  
 
 }
