--- a/estilo.css
+++ b/estilo.css
@@ -20,7 +20,6 @@ h1{
     text-decoration: underline;
     color: black; 
     margin: 10px;   
-
 }
 
 h1:hover{
@@ -37,7 +36,6 @@ div#cabecalho{
     border: 5px solid black;
     width: 100wh;
     border-radius: 10px;  
-
 }
 
 div#img{
@@ -46,7 +44,6 @@ div#img{
     margin: 10px;
     border: 5px solid black;
     border-radius: 10px;  
-
 }
 
 div#menu >ul > li{
@@ -61,7 +58,6 @@ div#menu >ul > li{
     text-transform: uppercase;
     width: 100px;
     display: inline-block;
-
 }
 
 div#menu >ul > li:hover{
@@ -76,7 +72,6 @@ div#menu >ul > li:hover{
     text-transform: uppercase;
     width: 100px;
     display: inline-block;
-
 }
 
 div#menu >ul > li > a{
@@ -96,17 +91,50 @@ div#corpo{
     margin: 10px;
     border: 5px solid black;
     border-radius: 10px;  
-
 }
 
-div#img{
+div#corpo > p{
+    text-align: center;
+    padding: 5px;
+    margin: 10px;
+    border: 5px solid black;
+    border-radius: 10px;  
+    width: 400px;
+    height: 300px;
+}
+
+div#corpo > h2{
+    color: black;
+    padding: 5px;
+    margin: 10px;
+}
+
+div#corpo > h2:hover{
+    color: royalblue;
+}
+
+div#corpo > img{
     text-align: center;
     padding: 5px;
     margin: 10px;
     border: 5px solid black;
     border-radius: 10px; 
     width: 50px; 
-    height: 50px;
-    
+    height: 50px;   
+}
 
+div#rodape{
+    background-color: rgb(191, 199, 216);
+    color: black;
+    text-align: center;
+    padding: 5px;
+    margin: 10px;
+    border: 5px solid black;
+    border-radius: 10px;  
+}
+
+div#corpo > img{
+    width: 400px;
+    height: 300px;
+    border-radius: 10px;
 }
